Fixing Payara and Wildfly tests